--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ before_install:
 # before_script: npm install
 script: true
 after_success:
-- ssh ci@39.104.165.95 'cd /home/ci && git pull'
+- ssh ci@39.104.165.95 'cd /home/ci/myblog && git pull'
